got micro frontend to connect

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,16 @@
-<!-- sourced from https://raw.githubusercontent.com/reactjs/reactjs.org/master/static/html/single-file-example.html -->
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" href="favicon.ico" />
-		<link rel="shortcut icon" href="${require('./favicon.ico')}" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-		<link rel="apple-touch-icon" href="logo192.png" />
-		<link rel="manifest" href="manifest.json" />
-		<title>React Starter</title>
+		<script src="http://localhost:8080/remoteEntry.js"></script>
+		<title>App1</title>
 	</head>
 
 	<body>
 		<div id="root"></div>
-		<noscript> You need to enable JavaScript to run this app. </noscript>
-		<script src="../dist/index.bundle.js"></script>
 	</body>
 </html>
